Bug 89484 - "Expand references when new columns/rows are inserted" spoils range references when row is inserted in another sheet
Summary: "Expand references when new columns/rows are inserted" spoils range reference...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: All All
: medium major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.5.0 target:4.3.7 target:4.4.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-02-19 20:42 UTC by Klaus Ladner
Modified: 2015-02-26 12:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Klaus Ladner 2015-02-19 20:42:02 UTC
I am not sure if it is the same than Bug 81659. Sorry, if duplicate.

1. Turn on: "Expand references when new columns/rows are inserted"
2. Add 1 to A1 on Sheet1
3. Add formula =SUM(A1:A1) into B1
4. Add second sheet
5. Go to line number 2 in second sheet
6. Insert Rows
7. Look at formula in B1 in sheet 1. It has changed to =SUM(A1:A2)

I expect formulas in sheet 1 to stay unchanged when inserting rows into sheet 2 because sheet 2 is not in the scope of the formulas reference
Comment 1 m_a_riosv 2015-02-21 01:24:38 UTC
Hi @Klaus, thanks for reporting.

Reproducible:
Win7x64
Versión: 4.2.0.0.beta1 Id. de compilación: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7
Version: 4.2.8.0.0+ Build ID: 1fc1d0d7d38bb16832d0d78d78682ed2d5f8716f
Version: 4.4.1.1 Build ID: b5ac74bf8683a92078a2bc8aff97d4b436af63cb
Version: 4.5.0.0.alpha0+ Build ID: 5210de1c91db64c7d4d99fdda95031b384577219
         TinderBox: Win-x86@39, Branch:master, Time: 2015-02-17_03:14:23

Last working.
Versión: 4.1.6.2 Id. de compilación: 40ff705089295be5be0aae9b15123f687c05b0a
Comment 2 Eike Rathke (retired, only occasionally showing up) 2015-02-23 20:49:40 UTC
Probably a duplicate of bug 81659, I'll investigate.
Comment 3 Commit Notification 2015-02-24 21:02:52 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5803c76f318b2a8b655bf83a8257f60cd112ac71

Resolves: tdf#89484 check that sheet reference is within selected sheets

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2015-02-24 21:09:22 UTC
Different bug 81659.
Comment 5 Eike Rathke (retired, only occasionally showing up) 2015-02-24 22:02:25 UTC
Pending review
https://gerrit.libreoffice.org/14609 for 4-4
https://gerrit.libreoffice.org/14610 for 4-3
Comment 6 Commit Notification 2015-02-25 05:55:38 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a0712e79a53c057e4a337c5b8570262dc5a33de&h=libreoffice-4-3

Resolves: tdf#89484 check that sheet reference is within selected sheets

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-02-25 05:55:43 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0b7506b135fd7edd986376a5174a88159ca2f80&h=libreoffice-4-4

Resolves: tdf#89484 check that sheet reference is within selected sheets

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Klaus Ladner 2015-02-26 12:58:28 UTC
Thank you Eike (and also to all the others who are maybe unvisible behind the scenes doing a good job) for fixing this so quickly. I am really looking forward to 4.4.2