Resolves: tdf#89484 check that sheet reference is within selected sheets

Change-Id: I88f1d0a134ffa3fbb9a5b5abdabbd4774f457e81