sc/source/core/tool/token.cxx
@@ -2517,6 +2517,10 @@ bool expandRangeByEdge( const sc::RefUpdateContext& rCxt, ScRange& rRefRange, co
         // Edge-expansion is turned off.
         return false;
 
+    if (!(rSelectedRange.aStart.Tab() <= rRefRange.aStart.Tab() && rRefRange.aEnd.Tab() <= rSelectedRange.aEnd.Tab()))
+        // Sheet references not within selected range.
+        return false;
+
     if (rCxt.mnColDelta > 0)
     {
         // Insert and shift right.
